# todo-list-rs

./: .gitignore  Cargo.toml
gui/: Cargo.toml
gui/src/: lib.rs  main.rs
gui/src/main_window/: add_task.rs  column.rs  edit_task.rs  main_window.rs  mod.rs  task.rs  tasks.rs
gui/src/main_window/dialogs/: add_task.rs  edit_task.rs  mod.rs
gui/src/main_window/widgets/: column.rs  mod.rs  task.rs
main/: Cargo.toml
main/src/: main.rs
tasks/: Cargo.toml
tasks/src/: lib.rs  status.rs  task.rs  tasks.rs
