[package]
name = "gui"
version = "0.1.0"
authors = ["Piotr Gogola <gogola.piotr@interia.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tasks = { path = "../tasks" }
gdk = "^0"
gio = "^0"
glib = "^0"
gtk = "^0"
rand = "^0"